# Astick

./: CMakeLists.txt  LICENSE  compile_commands.json
protocols/: color-management-v1-protocol.h  content-type-v1-protocol.h  ext-image-copy-capture-v1-protocol.h
src/: application.cpp  application.h  compositor.cpp  compositor.h  cursor.cpp  cursor.h  debug.cpp  debug.h  layout.cpp  layout.h  main.cpp  output.cpp  output.h  popup.cpp  popup.h  toplevel.cpp  toplevel.h  util.cpp  util.h  wlroots.h
src/input/: keyboard.cpp  keyboard.h  mouse.cpp  mouse.h
